<resources>
    <string name="app_name">Roll for Kotlin</string>
    <string name="button">Button</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="name">Name :</string>
    <string name="gender">Gender :</string>
    <string name="level">Level :</string>
    <string name="empty"></string>
    <string name="Lasillya">  Lasillya  </string>
    <string name="swipe">  - Swipe -  </string>
    <string name="next">Continue</string>
    <string name="logoimage">LogoImage</string>
    <string name="background">Background</string>
    <string name="description"></string>
    <string name="klasa">Class</string>
    <string name="race">Race</string>
    <string name="strenght">Strength</string>
    <string name="wisdom">Wisdom</string>
    <string name="inteligence">Inteligence</string>
    <string name="dexterity">Dexterity</string>
    <string name="charisma">Charisma</string>
    <string name="constitution">Constitution</string>
    <string-array name="levels">
        <item>1 lvl</item>
        <item>2 lvl</item>
        <item>3 lvl</item>
        <item>4 lvl</item>
        <item>5 lvl</item>
        <item>6 lvl</item>
        <item>7 lvl</item>
        <item>8 lvl</item>
        <item>9 lvl</item>
        <item>10 lvl</item>
        <item>11 lvl</item>
        <item>12 lvl</item>
        <item>13 lvl</item>
        <item>14 lvl</item>
        <item>15 lvl</item>
        <item>16 lvl</item>
        <item>17 lvl</item>
        <item>18 lvl</item>
        <item>19 lvl</item>
        <item>20 lvl</item>
    </string-array>

    <string-array name="races">
        <item>Human</item>
        <item>Elf</item>
        <item>Dwarf</item>
        <item>Gnome</item>
        <item>Halfling</item>
        <item>Tiefling</item>
    </string-array>

    <string-array name="classes">
        <item>Barbarian</item>
        <item>Bard</item>
        <item>Wizard</item>
        <item>Ranger</item>
        <item>Cleric</item>
        <item>Rogue</item>
        <item>Fighter</item>
    </string-array>

    <string-array name="backgrounds">
        <item>Athlete</item>
        <item>Charlatan</item>
        <item>Criminal</item>
        <item>Entertainer</item>
        <item>Folk Hero</item>
        <item>Knight</item>
        <item>Noble</item>
        <item>Sailor</item>
        <item>Soldier</item>
    </string-array>

    <string-array name="armor">
        <item>Leather</item>
        <item>Studded leather</item>
        <item>Hide</item>
        <item>Chain shirt</item>
        <item>Scale mail</item>
        <item>Breastplate</item>
        <item>Half plate</item>
        <item>Ring mail</item>
        <item>Chain mail</item>
        <item>Plate</item>
    </string-array>

    <string-array name="alignment">
        <item>Lawful good</item>
        <item>Neutral good</item>
        <item>Chaotic good</item>
        <item>Lawful neutral</item>
        <item>True neutral</item>
        <item>Chaotic neutral</item>
        <item>Lawful evil</item>
        <item>Neutral evil</item>
        <item>Chaotic evil</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="select">          Select:</string>
    <string name="language">        Language</string>
    <string name="goblin">          Goblin</string>
    <string name="infernal">        Infernal</string>
    <string name="dwarvish">        Dwarvish</string>
    <string name="elvish">          Elvish</string>
    <string name="gnomish">         Gnomish</string>
    <string name="halfling">        Halfling</string>
    <string name="undercommon">     Undercommon</string>
    <string name="elf">             Elvish</string>
    <string name="sylavn">          Sylvan</string>

    <string name="proficiency">     Proficiency</string>
    <string name="acrobatics">      Acrobatics</string>
    <string name="animalH">         Animal Handling</string>
    <string name="arcana">          Arcana</string>
    <string name="athletics">       Athletics</string>
    <string name="deception">       Deception</string>
    <string name="history">         History</string>
    <string name="insight">         Insight</string>
    <string name="intimidation">    Intimidation</string>
    <string name="investigation">   Investigation</string>
    <string name="medicine">        Medicine</string>
    <string name="nature">          Nature</string>
    <string name="perception">      Perception</string>
    <string name="performance">     Performance</string>
    <string name="persuasion">      Persuasion</string>
    <string name="religion">        Religion</string>
    <string name="sleightOfHand">   Sleight of Hand</string>
    <string name="stealth">         Stealth</string>
    <string name="survival">        Survival</string>

    <string name="alchemistS">      Alchemist’s supplies</string>
    <string name="cartographerT">   Cartographer’s tools</string>
    <string name="cookU">           Cook’s utensils</string>
    <string name="jewelerT">        Jeweler’s tools</string>
    <string name="thievesT">        Thieves’ tools</string>
    <string name="tinkerT">         Tinker’s tools</string>
    <string name="woodcarverT">     Woodcarver’s tools</string>
    <string name="tools">           Tools</string>
    <string name="armor">           Armor</string>
    <string name="weapon">          Weapon</string>
    <string name="dagger">          Dagger</string>
    <string name="javelin">         Javelin</string>
    <string name="quarterstaff">    Quarterstaff</string>
    <string name="crossbowL">       Crossbow, light</string>
    <string name="shortbow">        Shortbow</string>
    <string name="battleaxe">       Battleaxe</string>
    <string name="greataxe">        Greataxe</string>
    <string name="greatsword">      Greatsword</string>
    <string name="longsword">       Longsword</string>
    <string name="rapier">          Rapier</string>
    <string name="longbow">         Longbow</string>
    <string name="potions">         Potions</string>
    <string name="healing">         Healing Potion</string>
    <string name="money">           Money</string>
    <string name="instrument">      Instruments</string>
    <string name="drum">            Drum</string>
    <string name="flute">           Flute</string>
    <string name="lyre">            Lyre</string>
    <string name="horn">            Horn</string>
    <string name="panFlute">        Pan flute</string>
    <string name="copper">          Copper</string>
    <string name="silver">          Silver</string>
    <string name="gold">            Gold</string>
    <string name="platinum">        Platinum</string>
    <string name="alignment">       Alignment</string>
    <string name="deity">           Diety</string>
    <string name="theMother">       The Mother</string>
    <string name="backstory">       Backstory</string>
    <string name="backstoryHint">   My name is Lasillya. I am 20 years old and I was born in a noble family ... </string>
    <string name="looks">           Red hair, fair skin, black robe ... </string>
    <string name="appearance">      Appearance</string>
    <string name="additional">      Additional Features</string>
    <string name="additionalHint">  Anything that doesn\'t have a place ... </string>

    //Spells
    <string name="noSpell">         Your class has no spells</string>

    <string name="cantrip">         Cantrips</string>
    <string name="controlFlame">    Control Flame</string>
    <string name="firebolt">        Firebolt</string>
    <string name="friends">         Friends</string>
    <string name="guidance">        Guidance</string>
    <string name="light">           Light</string>
    <string name="mageHand">        Mage Hand</string>
    <string name="mending">         Mending</string>
    <string name="minorIlusion">    Minor Ilusion</string>
    <string name="sacredFlame">     Sacred Flame</string>
    <string name="spareTheDying">   Spare the dying</string>
    <string name="viciousMockery">  Vicious mockery</string>

    <string name="prepare">         Prepare:</string>

    <string name="spellLevel1">     Spell Level 1</string>
    <string name="absorbElements">  Absorb Elements</string>
    <string name="alarm">           Alarm</string>
    <string name="bless">           Bless</string>
    <string name="burningHands">    Burning Hands</string>
    <string name="causeFear">       Cause Fear</string>
    <string name="charmPerson">     Charm Person</string>
    <string name="colorSpray">      Color Spray</string>
    <string name="cureWounds">      Cure Wounds</string>
    <string name="detectMagic">     Detect Magic</string>
    <string name="entangle">        Entangle</string>
    <string name="featherFall">     Feather Fall</string>
    <string name="healingWord">     Healing Word</string>
    <string name="inflictWounds">   Inflict Wounds</string>
    <string name="silentImage">     Silent Image</string>

    <string name="spellLevel2">     Spell Level 2</string>
    <string name="animalMessenger"> Animal Messenger</string>
    <string name="blindDeaf">       Blindness/Deafness</string>
    <string name="calmEmotion">     Calm Emotion</string>
    <string name="darkness">        Darkness</string>
    <string name="darkVision">      Dark Vision</string>
    <string name="detectThoughts">  Detect Thoughts</string>
    <string name="enhanceAbility">  Enhance Ability</string>
    <string name="findTraps">       Find Traps</string>
    <string name="gustOfWind">      Gust of Wind</string>
    <string name="invisibility">    Invisibility</string>
    <string name="minorImage">      Minor Image</string>
    <string name="prayerOfHealing"> Prayer of Healing</string>
    <string name="silence">         Silence</string>
    <string name="spiritualWeapon"> Spiritual Weapon</string>
    <string name="web">             Web</string>

    <string name="spellLevel3">     Spell Level 3</string>
    <string name="animateDead">     Animate Dead</string>
    <string name="blink">           Blink</string>
    <string name="conjureAnimals">  Conjure Animals</string>
    <string name="counterSpell">    Counterspell</string>
    <string name="dispelMagic">     Dispel Magic</string>
    <string name="fear">            Fear</string>
    <string name="fly">             Fly</string>
    <string name="intellectfort">   Intellect Fortress</string>
    <string name="lifeTransference">Life Transference</string>
    <string name="lightingArrow">   Lightning Arrow</string>
    <string name="majorImage">      Major Image</string>
    <string name="massHealingWord"> Mass Healing Word</string>
    <string name="sending">         Sending</string>
    <string name="slow">            Slow</string>
    <string name="summonFey">       Summon Fey</string>
    <string name="tongues">         Tongues</string>
    <string name="waterWalk">       Water Walk</string>


<!--    <string name=""></string>-->
</resources>