<?xml version="1.0" encoding="utf-8"?>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:padding="10dp"
        tools:context=".ui.main.fragments.EquipmentFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/lbArmor"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="5dp"
                android:paddingLeft="10dp"
                android:paddingRight="0dp"
                android:background="#960E0E"
                android:fontFamily="@font/percy_goth"
                android:text="@string/armor"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:paddingStart="10dp"
                android:paddingEnd="0dp" />

            <Spinner
                android:id="@+id/spArmor"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="0dp"
                android:entries="@array/armor"
                android:spinnerMode="dialog"
                android:theme="@style/SpinnerTheme2" />

            <TextView
                android:id="@+id/lbWeapon"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:paddingLeft="10dp"
                android:paddingRight="0dp"
                android:layout_marginTop="5dp"
                android:background="#960E0E"
                android:fontFamily="@font/percy_goth"
                android:text="@string/weapon"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:paddingStart="10dp"
                android:paddingEnd="0dp" />

            <CheckBox
                android:id="@+id/cbWpDagger"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:text="@string/dagger"
                android:theme="@style/SpinnerTheme2" />

            <CheckBox
                android:id="@+id/cbWpJavelin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:text="@string/javelin"
                android:theme="@style/SpinnerTheme2" />

            <CheckBox
                android:id="@+id/cbWpQuarterstaff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:text="@string/quarterstaff"
                android:theme="@style/SpinnerTheme2" />

            <CheckBox
                android:id="@+id/cbWpCrossbowL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:text="@string/crossbowL"
                android:theme="@style/SpinnerTheme2" />

            <CheckBox
                android:id="@+id/cbWpShortbow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:text="@string/shortbow"
                android:theme="@style/SpinnerTheme2" />

            <CheckBox
                android:id="@+id/cbWpBattleaxe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:text="@string/battleaxe"
                android:theme="@style/SpinnerTheme2" />

            <CheckBox
                android:id="@+id/cbWpGreataxe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:text="@string/greataxe"
                android:theme="@style/SpinnerTheme2" />

            <CheckBox
                android:id="@+id/cbWpGreatsword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:text="@string/greatsword"
                android:theme="@style/SpinnerTheme2" />

            <CheckBox
                android:id="@+id/cbWpLongsword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:text="@string/longsword"
                android:theme="@style/SpinnerTheme2" />

            <CheckBox
                android:id="@+id/cbWpRapier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:text="@string/rapier"
                android:theme="@style/SpinnerTheme2" />

            <CheckBox
                android:id="@+id/cbWpLongbow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:text="@string/longbow"
                android:theme="@style/SpinnerTheme2" />

            <TextView
                android:id="@+id/lbPotions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="0dp"
                android:layout_marginTop="0dp"
                android:background="#960E0E"
                android:fontFamily="@font/percy_goth"
                android:text="@string/potions"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:paddingStart="10dp"
                android:paddingEnd="0dp" />

            <CheckBox
                android:id="@+id/cbHealingPotion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:text="@string/healing"
                android:theme="@style/SpinnerTheme2" />

            <TextView
                android:id="@+id/lbMoney"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="0dp"
                android:layout_marginTop="0dp"
                android:background="#960E0E"
                android:fontFamily="@font/percy_goth"
                android:text="@string/money"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:paddingStart="10dp"
                android:paddingEnd="0dp" />

            <Button
                android:id="@+id/btnCopper"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/percy_goth"
                android:text="@string/zero"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                app:backgroundTint="#960E0E"
                android:layout_marginStart="20dp" />

            <TextView
                android:id="@+id/lbCopper"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="0dp"
                android:fontFamily="@font/percy_goth"
                android:text="@string/copper"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btnSilver"
                android:layout_width="100dp"
                android:layout_marginLeft="170dp"
                android:layout_marginTop="-130dp"
                android:layout_height="100dp"
                android:fontFamily="@font/percy_goth"
                android:text="@string/zero"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                app:backgroundTint="#960E0E"
                android:layout_marginStart="170dp" />

            <TextView
                android:id="@+id/lbSilver"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="185dp"
                android:layout_marginLeft="185dp"
                android:layout_marginTop="0dp"
                android:fontFamily="@font/percy_goth"
                android:text="@string/silver"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btnGold"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginLeft="20dp"
                android:fontFamily="@font/percy_goth"
                android:text="@string/zero"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                app:backgroundTint="#960E0E"
                android:layout_marginStart="20dp" />

            <TextView
                android:id="@+id/lbGold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="0dp"
                android:fontFamily="@font/percy_goth"
                android:text="@string/gold"
                android:textSize="20sp" />
            <Button
                android:id="@+id/btnPlatinum"
                android:layout_width="100dp"
                android:layout_marginLeft="170dp"
                android:layout_marginTop="-130dp"
                android:layout_height="100dp"
                android:fontFamily="@font/percy_goth"
                android:text="@string/zero"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                app:backgroundTint="#960E0E"
                android:layout_marginStart="170dp" />

            <TextView
                android:id="@+id/lbPlatinum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="162dp"
                android:layout_marginLeft="162dp"
                android:layout_marginTop="0dp"
                android:fontFamily="@font/percy_goth"
                android:text="@string/platinum"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/lbInstruments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="0dp"
                android:layout_marginTop="10dp"
                android:background="#960E0E"
                android:fontFamily="@font/percy_goth"
                android:text="@string/instrument"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:paddingStart="10dp"
                android:paddingEnd="0dp" />

            <CheckBox
                android:id="@+id/cbInDrum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:text="@string/drum"
                android:theme="@style/SpinnerTheme2" />

            <CheckBox
                android:id="@+id/cbInFlute"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:text="@string/flute"
                android:theme="@style/SpinnerTheme2" />

            <CheckBox
                android:id="@+id/cbInLyre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:text="@string/lyre"
                android:theme="@style/SpinnerTheme2" />

            <CheckBox
                android:id="@+id/cbInHorn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:text="@string/horn"
                android:theme="@style/SpinnerTheme2" />

            <CheckBox
                android:id="@+id/cbInPanFlute"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:text="@string/panFlute"
                android:theme="@style/SpinnerTheme2" />

        </LinearLayout>
    </ScrollView>